Converted to SASS Preprocessor

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>Montgomery County - Summary</title>
     <link rel="icon" type="image/x-icon" href="src/Favicon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="src/header.css">
+    <link rel="stylesheet" href="src/header.scss">
 
     <!-- Roboto Font -->
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
